# qt-chess

./: .clang-format  .gitignore  CMakeLists.txt  ChessQML.pro  README.md  qt-chess.pro  resouces.qrc
qml/: Board.qml  ChessFigure.qml  GameFDialog.qml  History.qml  StepCase.qml  Window.qml  gamewindow.cc  gamewindow.hpp
src/: CMakeLists.txt  chess.cpp  chessmodel.cc  chessmodel.hpp  figurebishop.cc  figurebishop.hpp  figureintf.cc  figureintf.hpp  figureking.cc  figureking.hpp  figureknight.cc  figureknight.hpp  figurepawn.cc  figurepawn.hpp  figurequeen.cc  figurequeen.hpp  figurerook.cc  figurerook.hpp  gameengine.cc  gameengine.hpp  historymanager.cc  historymanager.hpp  historymodel.cc  historymodel.hpp  movepawn.cc  movepawn.hpp  movepoints.cc  movepoints.hpp  movevectors.cc  movevectors.hpp
